sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/SmartViscaConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>SmartViscaの表示設定や、Triggerの設定を持ちます。</description>
    <label>SmartVisca設定</label>
</CustomObject>