sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/AccountBulkRegistSearchMethod__c.field-meta.xml
<CustomField>
    <fullName>AccountBulkRegistSearchMethod__c</fullName>
    <defaultValue>1</defaultValue>
    <description>0: SOQLによるカウントを行い、その後SOQLで抽出する。 
その他: SOSL</description>
    <label>取引先・取引先責任者に登録(一括) 登録先候補の検索方法</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>