sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/AccountNotOverWrite__c.field-meta.xml
<CustomField>
    <fullName>AccountNotOverWrite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>取引先・取引先責任者に登録画面で「既存の取引先の情報を名刺情報で上書きする」チェックボックスをデフォルトでチェックなしとします。【移行済】</description>
    <inlineHelpText>取引先・取引先責任者に登録画面で「既存の取引先の情報を名刺情報で上書きする」チェックボックスをデフォルトでチェックなしとします。【移行済】</inlineHelpText>
    <label>取引先・取引先責任者に登録 取引先を名刺情報で上書きしない【移行済】</label>
    <type>Checkbox</type>
</CustomField>