sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/AccountSearchType__c.field-meta.xml
<CustomField>
    <fullName>AccountSearchType__c</fullName>
    <defaultValue>false</defaultValue>
    <description>取引先・取引先責任者に登録画面で「検索条件」のデフォルトを「取引先名のみで検索」にします。</description>
    <inlineHelpText>取引先・取引先責任者に登録画面で「検索条件」のデフォルトを「取引先名のみで検索」にします。</inlineHelpText>
    <label>取引先・取引先責任者に登録 取引先名のみで検索</label>
    <type>Checkbox</type>
</CustomField>