sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/AutoConvAccountSearchNotUsePhone2__c.field-meta.xml
<CustomField>
    <fullName>AutoConvAccountSearchNotUsePhone2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>自動連携でアカウントの候補を探す処理で、名刺の電話番号2を取引先の電話番号と照合しません。</description>
    <label>自動連携: 電話番号2 は取引先候補の条件に使わない</label>
    <type>Checkbox</type>
</CustomField>