sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/ContactNotOverWrite__c.field-meta.xml
<CustomField>
    <fullName>ContactNotOverWrite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>【移行済】</description>
    <inlineHelpText>【移行済】</inlineHelpText>
    <label>取引先・取引先責任者に登録 取引先責任者を名刺情報で上書きしない【移行済】</label>
    <type>Checkbox</type>
</CustomField>