sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/DispAccountOwner__c.field-meta.xml
<CustomField>
    <fullName>DispAccountOwner__c</fullName>
    <defaultValue>true</defaultValue>
    <description>取引先・取引先責任者に登録画面の登録先リストに取引先の所有者を表示します。</description>
    <label>取引先・取引先責任者に登録 取引先所有者表示</label>
    <type>Checkbox</type>
</CustomField>