sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/DispAccountRectype__c.field-meta.xml
<CustomField>
    <fullName>DispAccountRectype__c</fullName>
    <defaultValue>true</defaultValue>
    <description>取引先・取引先責任者に登録時に取引先レコードタイプを表示します【移行済】</description>
    <inlineHelpText>取引先・取引先責任者に登録時に取引先レコードタイプを表示します【移行済】</inlineHelpText>
    <label>取引先・取引先責任者に登録 取引先レコードタイプ表示【移行済】</label>
    <type>Checkbox</type>
</CustomField>