sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/DispContactOwner__c.field-meta.xml
<CustomField>
    <fullName>DispContactOwner__c</fullName>
    <defaultValue>true</defaultValue>
    <description>取引先・取引先責任者に登録画面の登録先リストに取引先責任者の所有者を表示します。</description>
    <label>取引先・取引先責任者に登録 取引先責任者所有者表示</label>
    <type>Checkbox</type>
</CustomField>