sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/DispContactRectype__c.field-meta.xml
<CustomField>
    <fullName>DispContactRectype__c</fullName>
    <defaultValue>true</defaultValue>
    <description>取引先・取引先責任者に登録画面の登録先リストに取引先責任者のレコードタイプを表示します【移行済】</description>
    <inlineHelpText>取引先・取引先責任者に登録画面の登録先リストに取引先責任者のレコードタイプを表示します【移行済】</inlineHelpText>
    <label>取引先・取引先責任者に登録 取引先責任者レコードタイプ表示【移行済】</label>
    <type>Checkbox</type>
</CustomField>