sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/DispLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>DispLastModifiedDate__c</fullName>
    <defaultValue>true</defaultValue>
    <description>取引先・取引先責任者に登録画面の登録先リストに最終更新日時を表示します。</description>
    <label>取引先・取引先責任者に登録 最終更新日表示</label>
    <type>Checkbox</type>
</CustomField>