sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/DispMail__c.field-meta.xml
<CustomField>
    <fullName>DispMail__c</fullName>
    <defaultValue>true</defaultValue>
    <description>取引先・取引先責任者に登録画面の登録先リストにメールアドレスを表示します。</description>
    <label>取引先・取引先責任者に登録 メールアドレス表示</label>
    <type>Checkbox</type>
</CustomField>