sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/DispMobile__c.field-meta.xml
<CustomField>
    <fullName>DispMobile__c</fullName>
    <defaultValue>true</defaultValue>
    <description>取引先・取引先責任者に登録画面の登録先リストに携帯電話を表示します。</description>
    <label>取引先・取引先責任者に登録 携帯電話表示</label>
    <type>Checkbox</type>
</CustomField>