sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/DispRenkeiSetting__c.field-meta.xml
<CustomField>
    <fullName>DispRenkeiSetting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SmartVisca設定画面に自動連携に関する設定を表示します。</description>
    <label>自動連携に関する設定を表示</label>
    <type>Checkbox</type>
</CustomField>