sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/DispState__c.field-meta.xml
<CustomField>
    <fullName>DispState__c</fullName>
    <defaultValue>true</defaultValue>
    <description>取引先・取引先責任者に登録画面の登録先リストに都道府県を表示します。</description>
    <label>取引先・取引先責任者に登録 都道府県表示</label>
    <type>Checkbox</type>
</CustomField>