sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/DispTitle__c.field-meta.xml
<CustomField>
    <fullName>DispTitle__c</fullName>
    <defaultValue>true</defaultValue>
    <description>取引先・取引先責任者に登録画面の登録先リストに役職を表示します。</description>
    <label>取引先・取引先責任者に登録 役職表示</label>
    <type>Checkbox</type>
</CustomField>