sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/FeedOnNameCardMentionToGroups__c.field-meta.xml
<CustomField>
    <fullName>FeedOnNameCardMentionToGroups__c</fullName>
    <description>名刺連携ユーザがメンション可能なグループを指定します。</description>
    <inlineHelpText>名刺連携ユーザがメンション可能なグループを指定します。</inlineHelpText>
    <label>同じ人と名刺交換したフィードをメンションするグループ</label>
    <type>TextArea</type>
</CustomField>