sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/FeedOnNameCardMentionToOwners__c.field-meta.xml
<CustomField>
    <fullName>FeedOnNameCardMentionToOwners__c</fullName>
    <defaultValue>false</defaultValue>
    <description>同じ人の名刺の中で最新の名刺が変わったときに、同じ人の名刺の所有者にメンションします。
名刺ごとにフィードが作成されるので、同一のユーザが同じ人の名刺を複数持っていた場合、重複して通知を受けます。
名刺連携ユーザが名刺所有者ユーザを参照可能である必要があります。</description>
    <inlineHelpText>同じ人の名刺の中で最新の名刺が変わったときに、同じ人の名刺の所有者にメンションします。 
名刺ごとにフィードが作成されるので、同一のユーザが同じ人の名刺を複数持っていた場合、重複して通知を受けます。 
名刺連携ユーザが名刺所有者ユーザを参照可能である必要があります。</inlineHelpText>
    <label>同じ人と名刺交換したフィードを名刺所有者にメンションする</label>
    <type>Checkbox</type>
</CustomField>