sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/FeedOnNameCardTopic__c.field-meta.xml
<CustomField>
    <fullName>FeedOnNameCardTopic__c</fullName>
    <description>文字列中で 以下のように最新の名刺レコードの値に置換されます。
{0} → 会社名
{1} → 所属
{2} → 役職
名刺交換: {0} {1} 
とすると、トピックは
名刺交換: 株式会社サンブリッジ 開発部 
となります。</description>
    <inlineHelpText>文字列中で 以下のように最新の名刺レコードの値に置換されます。
{0} → 会社名
{1} → 所属
{2} → 役職
名刺交換: {0} {1} 
とすると、トピックは
名刺交換: 株式会社サンブリッジ 開発部 
となります。</inlineHelpText>
    <label>同じ人と名刺交換したフィードのトピック</label>
    <length>99</length>
    <type>Text</type>
</CustomField>