sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/OrgTreeUseRegex__c.field-meta.xml
<CustomField>
    <fullName>OrgTreeUseRegex__c</fullName>
    <defaultValue>false</defaultValue>
    <description>組織情報を作るとき正規表現（カスタム表示ラベルのSB_NC_DivisionRegex）を使う</description>
    <inlineHelpText>サンブリッジサポートの指示があった場合のみ設定します。</inlineHelpText>
    <label>組織情報は正規表現を使う</label>
    <type>Checkbox</type>
</CustomField>