sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SAccountRegistPage__c.field-meta.xml
<CustomField>
    <fullName>SAccountRegistPage__c</fullName>
    <label>S取引先、取引先責任者登録ページ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>