sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SCameraDisableUserConfig__c.field-meta.xml
<CustomField>
    <fullName>SCameraDisableUserConfig__c</fullName>
    <defaultValue>false</defaultValue>
    <description>カスタム設定「SmartViscaユーザ設定」で設定した値に固定となります</description>
    <inlineHelpText>カスタム設定「SmartViscaユーザ設定」で設定した値に固定となります</inlineHelpText>
    <label>SSmartViscaカメラでユーザによる設定変更を不可にする</label>
    <type>Checkbox</type>
</CustomField>