sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SCameraEnableOwnerSelect__c.field-meta.xml
<CustomField>
    <fullName>SCameraEnableOwnerSelect__c</fullName>
    <defaultValue>true</defaultValue>
    <label>SSmartViscaカメラで所有者選択を有効にする</label>
    <type>Checkbox</type>
</CustomField>