sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SCameraOwnerSelectLimit__c.field-meta.xml
<CustomField>
    <fullName>SCameraOwnerSelectLimit__c</fullName>
    <defaultValue>5000</defaultValue>
    <label>SSmartViscaカメラの所有者選択リストの上限値</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>