sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SDatetimeFormat__c.field-meta.xml
<CustomField>
    <fullName>SDatetimeFormat__c</fullName>
    <defaultValue>&apos;yyyy/MM/dd/ HH:mm&apos;</defaultValue>
    <description>活動の日時項目の表示形式です。変更しないでください。</description>
    <label>S日時のフォーマット</label>
    <length>255</length>
    <type>Text</type>
</CustomField>