sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SDetailShowAddress__c.field-meta.xml
<CustomField>
    <fullName>SDetailShowAddress__c</fullName>
    <defaultValue>true</defaultValue>
    <description>名刺詳細画面（SmartVisca専用のカスタマイズ画面）に住所を表示します。</description>
    <label>S名刺詳細：住所を表示する</label>
    <type>Checkbox</type>
</CustomField>