sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SDetailShowAddressEng__c.field-meta.xml
<CustomField>
    <fullName>SDetailShowAddressEng__c</fullName>
    <defaultValue>false</defaultValue>
    <description>名刺詳細画面（SmartVisca専用のカスタマイズ画面）に英語住所を表示します。</description>
    <label>S名刺詳細：英語住所を表示する</label>
    <type>Checkbox</type>
</CustomField>