sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SDetailShowCompanyKana__c.field-meta.xml
<CustomField>
    <fullName>SDetailShowCompanyKana__c</fullName>
    <defaultValue>false</defaultValue>
    <description>名刺詳細画面（SmartVisca専用のカスタマイズ画面）に会社名カナを表示します。</description>
    <label>S名刺詳細：会社名カナを表示する</label>
    <type>Checkbox</type>
</CustomField>