sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SDetailShowEMail__c.field-meta.xml
<CustomField>
    <fullName>SDetailShowEMail__c</fullName>
    <defaultValue>true</defaultValue>
    <description>名刺詳細画面（SmartVisca専用のカスタマイズ画面）にメールアドレスを表示します。</description>
    <label>S名刺詳細：メールアドレスを表示する</label>
    <type>Checkbox</type>
</CustomField>