sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SDetailShowExchangeDate__c.field-meta.xml
<CustomField>
    <fullName>SDetailShowExchangeDate__c</fullName>
    <defaultValue>true</defaultValue>
    <description>名刺詳細画面（SmartVisca専用のカスタマイズ画面）に名刺交換日を表示します。</description>
    <label>S名刺詳細：名刺交換日を表示する</label>
    <type>Checkbox</type>
</CustomField>