sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SDetailShowFax__c.field-meta.xml
<CustomField>
    <fullName>SDetailShowFax__c</fullName>
    <defaultValue>true</defaultValue>
    <description>名刺詳細画面（SmartVisca専用のカスタマイズ画面）にFAX番号を表示します。</description>
    <label>S名刺詳細：FAX番号を表示する</label>
    <type>Checkbox</type>
</CustomField>