sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SDetailShowFreeHandMemo__c.field-meta.xml
<CustomField>
    <fullName>SDetailShowFreeHandMemo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>名刺詳細画面（SmartVisca専用のカスタマイズ画面）に手書きメモを表示します。</description>
    <label>S名刺詳細：手書きメモを表示する</label>
    <type>Checkbox</type>
</CustomField>