sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SDetailShowListName__c.field-meta.xml
<CustomField>
    <fullName>SDetailShowListName__c</fullName>
    <defaultValue>true</defaultValue>
    <description>名刺詳細画面（SmartVisca専用のカスタマイズ画面）にリスト名を表示します。</description>
    <label>S名刺詳細：リスト名を表示する</label>
    <type>Checkbox</type>
</CustomField>