sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SDetailShowMemo__c.field-meta.xml
<CustomField>
    <fullName>SDetailShowMemo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>名刺詳細画面（SmartVisca専用のカスタマイズ画面）にメモを表示します。</description>
    <label>S名刺詳細：メモを表示する</label>
    <type>Checkbox</type>
</CustomField>