sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SDetailShowMobile__c.field-meta.xml
<CustomField>
    <fullName>SDetailShowMobile__c</fullName>
    <defaultValue>true</defaultValue>
    <description>名刺詳細画面（SmartVisca専用のカスタマイズ画面）に携帯電話番号を表示します。</description>
    <label>S名刺詳細：携帯電話番号を表示する</label>
    <type>Checkbox</type>
</CustomField>