sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SDetailShowNameKana__c.field-meta.xml
<CustomField>
    <fullName>SDetailShowNameKana__c</fullName>
    <defaultValue>false</defaultValue>
    <description>名刺詳細画面（SmartVisca専用のカスタマイズ画面）に氏名カナを表示します。</description>
    <label>S名刺詳細：氏名カナを表示する</label>
    <type>Checkbox</type>
</CustomField>