sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SDetailShowNewsLink__c.field-meta.xml
<CustomField>
    <fullName>SDetailShowNewsLink__c</fullName>
    <defaultValue>true</defaultValue>
    <description>名刺詳細画面（SmartVisca専用のカスタマイズ画面）にGoogle Newsの検索リンクを表示します。</description>
    <inlineHelpText>Google News の検索リンクを表示します。</inlineHelpText>
    <label>S名刺詳細：ニュースリンクを表示する</label>
    <type>Checkbox</type>
</CustomField>