sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SDetailShowOtherOwner__c.field-meta.xml
<CustomField>
    <fullName>SDetailShowOtherOwner__c</fullName>
    <defaultValue>true</defaultValue>
    <description>自分所有以外の名刺で名刺詳細画面（SmartVisca専用のカスタマイズ画面）に所有者を表示します。</description>
    <inlineHelpText>自分所有以外の名刺で所有者を表示する場合にはチェックします。</inlineHelpText>
    <label>S名刺詳細：所有者を表示する</label>
    <type>Checkbox</type>
</CustomField>