sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SDetailShowTel__c.field-meta.xml
<CustomField>
    <fullName>SDetailShowTel__c</fullName>
    <defaultValue>true</defaultValue>
    <description>名刺詳細画面（SmartVisca専用のカスタマイズ画面）に電話番号を表示します。</description>
    <label>S名刺詳細：電話番号を表示する</label>
    <type>Checkbox</type>
</CustomField>