sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SDetailShowURL__c.field-meta.xml
<CustomField>
    <fullName>SDetailShowURL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>名刺詳細画面（SmartVisca専用のカスタマイズ画面）にURLを表示します。</description>
    <label>S名刺詳細：URLを表示する</label>
    <type>Checkbox</type>
</CustomField>