sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SDetailShowZipCode__c.field-meta.xml
<CustomField>
    <fullName>SDetailShowZipCode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>名刺詳細画面（SmartVisca専用のカスタマイズ画面）に郵便番号を表示します。</description>
    <label>S名刺詳細：郵便番号を表示する</label>
    <type>Checkbox</type>
</CustomField>