sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SDevelopment__c.field-meta.xml
<CustomField>
    <fullName>SDevelopment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>サンブリッジサポートの指示があった場合のみ設定します。</inlineHelpText>
    <label>S開発モードで動作する</label>
    <type>Checkbox</type>
</CustomField>