sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SDisableCameraLauncher__c.field-meta.xml
<CustomField>
    <fullName>SDisableCameraLauncher__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SSmartViscaカメラ起動ボタンを表示しない</label>
    <type>Checkbox</type>
</CustomField>