sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SEnableNameCardEdit__c.field-meta.xml
<CustomField>
    <fullName>SEnableNameCardEdit__c</fullName>
    <defaultValue>true</defaultValue>
    <description>名刺の編集・削除が可能かどうか</description>
    <label>S名刺の編集を行う</label>
    <type>Checkbox</type>
</CustomField>