sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SEventDurationInMinutes__c.field-meta.xml
<CustomField>
    <fullName>SEventDurationInMinutes__c</fullName>
    <defaultValue>60</defaultValue>
    <description>行動作成画面で終了時刻を省略したときの開始時刻からの間隔を指定します。</description>
    <label>S行動の省略時長さ（分）</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>