sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SExtraNamespace__c.field-meta.xml
<CustomField>
    <fullName>SExtraNamespace__c</fullName>
    <description>特別に名前空間名の指定が必要場合に使う</description>
    <inlineHelpText>サンブリッジサポートの指示があった場合のみ設定します。</inlineHelpText>
    <label>S別名前空間名</label>
    <length>128</length>
    <type>Text</type>
</CustomField>