sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SFilterSearchResult__c.field-meta.xml
<CustomField>
    <fullName>SFilterSearchResult__c</fullName>
    <defaultValue>false</defaultValue>
    <description>で文字列指定の グローバル検索で、入力した文字列を以下の項目値と照合し、検索結果を絞ります。 
会社名、氏名、メールアドレス、電話番号1、電話番号2、携帯番号</description>
    <label>S検索結果を特定の項目値で絞り込む</label>
    <type>Checkbox</type>
</CustomField>