sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SFindNearByQueryDistance__c.field-meta.xml
<CustomField>
    <fullName>SFindNearByQueryDistance__c</fullName>
    <defaultValue>10</defaultValue>
    <description>近所の名刺を検索するときの距離（キロ）の条件</description>
    <inlineHelpText>近所の名刺を検索するときの距離（キロ）の条件</inlineHelpText>
    <label>S近所の名刺を検索するときの距離（キロ）</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>