sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SFindNearByQueryLimit__c.field-meta.xml
<CustomField>
    <fullName>SFindNearByQueryLimit__c</fullName>
    <defaultValue>10</defaultValue>
    <description>近所の名刺を検索するときの件数の上限値</description>
    <inlineHelpText>近所の名刺を検索するときの件数の上限値</inlineHelpText>
    <label>S近所の名刺を検索するときの件数の上限値</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>