sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SGeolocationQueryInterval__c.field-meta.xml
<CustomField>
    <fullName>SGeolocationQueryInterval__c</fullName>
    <defaultValue>1000</defaultValue>
    <description>Google へ問い合わせる間隔（ミリ秒）</description>
    <inlineHelpText>Google へ問い合わせる間隔（ミリ秒）</inlineHelpText>
    <label>S地理位置情報を取得する間隔</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>