sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SGeolocationQueryLimit__c.field-meta.xml
<CustomField>
    <fullName>SGeolocationQueryLimit__c</fullName>
    <defaultValue>100</defaultValue>
    <description>地理位置情報を設定するために一度に名刺情報を取得する件数</description>
    <label>S地理位置情報を取得する件数</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>