sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SIgnoreJobChanged__c.field-meta.xml
<CustomField>
    <fullName>SIgnoreJobChanged__c</fullName>
    <defaultValue>true</defaultValue>
    <description>転職済み にチェックがある名刺は検索の対象にしません</description>
    <label>S転職済みの名刺は表示しない</label>
    <type>Checkbox</type>
</CustomField>