sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SListQueryIgnoreLatestCard__c.field-meta.xml
<CustomField>
    <fullName>SListQueryIgnoreLatestCard__c</fullName>
    <defaultValue>false</defaultValue>
    <description>S1で、みんなの名刺で 最新の名刺のみを対象にします。
最新の名刺の判定は、最新名刺 Parent__c が NULL であることです。</description>
    <label>S名刺一覧のみんなの名刺は最新の名刺以外も対象にする</label>
    <type>Checkbox</type>
</CustomField>