sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SListQueryMineLimit__c.field-meta.xml
<CustomField>
    <fullName>SListQueryMineLimit__c</fullName>
    <defaultValue>100</defaultValue>
    <description>名刺一覧で自分の名刺を検索するときの件数の上限値です。100程度から2000までの数値をしていしてください。</description>
    <inlineHelpText>名刺一覧で自分の名刺を検索するときの件数の上限値</inlineHelpText>
    <label>S名刺一覧で自分の名刺を検索するときの件数の上限値</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>