sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SMAXMapInfoWindowCompanies__c.field-meta.xml
<CustomField>
    <fullName>SMAXMapInfoWindowCompanies__c</fullName>
    <defaultValue>4</defaultValue>
    <description>地図のピンをクリックしたとき表示される InfoWindow に表示するときの会社数の最大値</description>
    <label>S地図のピンに表示する会社数の最大値</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>