sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SMAXMapInfoWindowPersons__c.field-meta.xml
<CustomField>
    <fullName>SMAXMapInfoWindowPersons__c</fullName>
    <defaultValue>2</defaultValue>
    <description>地図のピンをクリックしたとき表示される InfoWindow に表示するときの会社ごとの氏名数の最大値</description>
    <label>S地図のピンに表示する会社ごとの氏名数の最大値</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>