sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SMAXOrgTreeNameCards__c.field-meta.xml
<CustomField>
    <fullName>SMAXOrgTreeNameCards__c</fullName>
    <defaultValue>200</defaultValue>
    <description>名刺詳細の組織階層の構築で取得する名刺レコード数の上限値</description>
    <inlineHelpText>名刺詳細の組織階層の構築で取得する名刺レコード数の上限値</inlineHelpText>
    <label>S組織階層を作るときに取得する名刺の上限値</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>