sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SOrgTreeShowTitle__c.field-meta.xml
<CustomField>
    <fullName>SOrgTreeShowTitle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>S組織情報に役職を表示する</label>
    <type>Checkbox</type>
</CustomField>