sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SRegistAccountFields1__c.field-meta.xml
<CustomField>
    <fullName>SRegistAccountFields1__c</fullName>
    <defaultValue>&quot;company_name__c:Name,division__c:Site,zip_code__c:BillingPostalCode,address_pref__c:BillingState,city:BillingCity,street:BillingStreet,tel1__c:Phone,fax1__c:Fax,web_url1__c:Website&quot;</defaultValue>
    <description>取引先を登録する際の項目のマッピング 
名刺の項目API名:(コロン)取引先の項目API名
※ 名刺の市区郡はcity、町名・番地+建物 はstreet
カンマで区切る
1つの名刺項目 から複数項目を作る場合は複数作る</description>
    <inlineHelpText>取引先を登録する際の項目のマッピング 
名刺の項目API名:(コロン)取引先の項目API名
カンマで区切る
1つの名刺項目 から複数項目を作る場合は複数作る</inlineHelpText>
    <label>S取引先登録時の項目マッピング1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>