sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SRegistAccountFields2__c.field-meta.xml
<CustomField>
    <fullName>SRegistAccountFields2__c</fullName>
    <defaultValue>&quot;Id:NameCard__c,list_name__c:NameCardListName__c,memo__c:NameCardMemo__c,freehandmemo__c:NameCardFreehandmemo__c&quot;</defaultValue>
    <label>S取引先登録時の項目マッピング2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>