sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SRegistAccountFields3__c.field-meta.xml
<CustomField>
    <fullName>SRegistAccountFields3__c</fullName>
    <label>S取引先登録時の項目マッピング3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>