sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SRegistContactFields1__c.field-meta.xml
<CustomField>
    <fullName>SRegistContactFields1__c</fullName>
    <defaultValue>&quot;last_name:LastName,first_name:FirstName,zip_code__c:MailingPostalCode,address_pref__c:MailingState,city:MailingCity,street:MailingStreet&quot;</defaultValue>
    <description>取引先責任者を登録する際の項目のマッピング 
名刺の項目API名:(コロン)取引先責任者の項目API名 
※ 名刺の市区郡はcity、町名・番地+建物 はstreet
※ 名刺の姓はlast_name、名はfirst_name
カンマで区切る 
1つの名刺項目 から複数項目を作る場合は複数作る</description>
    <inlineHelpText>取引先責任者を登録する際の項目のマッピング 
名刺の項目API名:(コロン)取引先責任者の項目API名 
カンマで区切る 
1つの名刺項目 から複数項目を作る場合は複数作る</inlineHelpText>
    <label>S取引先責任者登録時の項目マッピング1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>