sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SRegistContactFields2__c.field-meta.xml
<CustomField>
    <fullName>SRegistContactFields2__c</fullName>
    <defaultValue>&quot;tel1__c:Phone,fax1__c:Fax,mobile__c:MobilePhone,email__c:Email,title_name__c:Title,division__c:Department,Id:NameCard__c,list_name__c:NameCardListName__c,memo__c:NameCardMemo__c,freehandmemo__c:NameCardFreehandmemo__c&quot;</defaultValue>
    <label>S取引先責任者登録時の項目マッピング2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>