sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SRegistContactFields3__c.field-meta.xml
<CustomField>
    <fullName>SRegistContactFields3__c</fullName>
    <label>S取引先責任者登録時の項目マッピング3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>