sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SRegistOverwriteContact__c.field-meta.xml
<CustomField>
    <fullName>SRegistOverwriteContact__c</fullName>
    <defaultValue>true</defaultValue>
    <description>S1取引先責任者登録登録のときの初期値
TRUE:取引先責任者の所定の項目を上書きします。
FALSE:取引先責任者の所定の項目は上書きせず、名刺の取引先責任者参照項目をセットするのみ
※Version2.1で名刺基本設定を参照するようにしました。</description>
    <label>S取引先責任者情報を名刺情報で上書きする【移行済】</label>
    <type>Checkbox</type>
</CustomField>