sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SRegistQueryAccountFields1__c.field-meta.xml
<CustomField>
    <fullName>SRegistQueryAccountFields1__c</fullName>
    <defaultValue>&quot;BillingPostalCode:3,BillingState:2,BillingCity:3, BillingStreet:3, Site:2&quot;</defaultValue>
    <description>Id,Name以外の画面に表示する取引先項目の API名:数値 をカンマ区切りで指定してください。
数値 は、
・1はリストにのみ表示
・2はリストとポップアップに表示
・3はポップアップにのみ表示
リスト、ポップアップともに記載順に表示します。</description>
    <inlineHelpText>Id,Name以外の画面に表示する取引先項目の API名:数値 をカンマ区切りで指定してください。
数値 は、
・1はリストにのみ表示
・2はリストとポップアップに表示
・3はポップアップにのみ表示
リスト、ポップアップともに記載順に表示します。</inlineHelpText>
    <label>S取引先登録時表示する取引先の項目1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>