sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SRegistQueryAccountFields2__c.field-meta.xml
<CustomField>
    <fullName>SRegistQueryAccountFields2__c</fullName>
    <description>Id,Name以外の画面に表示する取引先項目のAPI名を改行区切りで指定してください。</description>
    <label>S取引先登録時表示する取引先の項目2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>