sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SRegistQueryContactFields1__c.field-meta.xml
<CustomField>
    <fullName>SRegistQueryContactFields1__c</fullName>
    <defaultValue>&quot;Department:2,Title:2,Email:2, MailingPostalCode:3, MailingState:3, MailingCity:3,MailingStreet:3&quot;</defaultValue>
    <description>Id,Name以外の画面に表示する取引先責任者項目の API名:数値 をカンマ区切りで指定してください。 
数値 は、 
・1はリストにのみ表示 
・2はリストとポップアップに表示 
・3はポップアップにのみ表示 
リスト、ポップアップともに記載順に表示します。</description>
    <inlineHelpText>Id,Name以外の画面に表示する取引先責任者項目の API名:数値 をカンマ区切りで指定してください。 
数値 は、 
・1はリストにのみ表示 
・2はリストとポップアップに表示 
・3はポップアップにのみ表示 
リスト、ポップアップともに記載順に表示します。</inlineHelpText>
    <label>S取引先責任者登録時表示する取引先責任者の項目1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>