sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SRegistQueryContactFields2__c.field-meta.xml
<CustomField>
    <fullName>SRegistQueryContactFields2__c</fullName>
    <description>Id,Name以外の画面に表示する取引先責任者項目のAPI名をカンマ区切りで指定してください。</description>
    <label>S取引先責任者登録時表示する取引先責任者の項目2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>