sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SRegistQueryLimit__c.field-meta.xml
<CustomField>
    <fullName>SRegistQueryLimit__c</fullName>
    <defaultValue>200</defaultValue>
    <label>S取引先登録で検索するときの件数の上限値</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>