sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SScannerName__c.field-meta.xml
<CustomField>
    <fullName>SScannerName__c</fullName>
    <inlineHelpText>サンブリッジサポートの指示があった場合のみ設定します。</inlineHelpText>
    <label>Sスキャナー名</label>
    <length>128</length>
    <type>Text</type>
</CustomField>