sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SSearchAllIgnoreDeliveryType__c.field-meta.xml
<CustomField>
    <fullName>SSearchAllIgnoreDeliveryType__c</fullName>
    <defaultValue>false</defaultValue>
    <description>みんなの名刺、ユーザ指定の名刺一覧で、自分の名刺と最近見たい名刺と同様に、すべての名刺を検索対象にします。オフの場合、2次納品で最新の名刺だけが対象です。</description>
    <label>Sみんなの名刺でも2次納品以外も検索の対象にする</label>
    <type>Checkbox</type>
</CustomField>