sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SSmartViscaServer__c.field-meta.xml
<CustomField>
    <fullName>SSmartViscaServer__c</fullName>
    <description>SmartViscaサーバのAPIに非標準のURLを使うときに指定します。</description>
    <inlineHelpText>SmartViscaサーバのAPIに非標準のURLを使うときに指定します。</inlineHelpText>
    <label>SSmartViscaサーバ</label>
    <type>Url</type>
</CustomField>