sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SSmartViscaServerOptions__c.field-meta.xml
<CustomField>
    <fullName>SSmartViscaServerOptions__c</fullName>
    <description>必要に応じてSmartViscaサーバへ送る追加のパラメータを指定します。
セッションCookieが使えない環境では、 proxy_flag:1</description>
    <inlineHelpText>必要に応じてSmartViscaサーバへ送る追加のパラメータを指定します。</inlineHelpText>
    <label>SSmartViscaサーバ オプション</label>
    <type>TextArea</type>
</CustomField>