sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SSmartViscaServerProxyFlag__c.field-meta.xml
<CustomField>
    <fullName>SSmartViscaServerProxyFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>移行して、SSmartViscaサーバ オプション で指定します。</description>
    <label>SSmartViscaサーバ プロキシフラグ【移行済】</label>
    <type>Checkbox</type>
</CustomField>