sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SSmartViscaServeServiceID__c.field-meta.xml
<CustomField>
    <fullName>SSmartViscaServeServiceID__c</fullName>
    <description>SmartViscaサーバに非標準のサービスIDを使うときに指定します。</description>
    <inlineHelpText>SmartViscaサーバに非標準のサービスIDを使うときに指定します。</inlineHelpText>
    <label>SSmartViscaサーバ サービスID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>