sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/STargetActivity__c.field-meta.xml
<CustomField>
    <fullName>STargetActivity__c</fullName>
    <defaultValue>9</defaultValue>
    <inlineHelpText>0:取引先責任者　と 取引先
1:取引先責任者
2:取引先
その他：名刺</inlineHelpText>
    <label>S活動の対象とするオブジェクト</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>