sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SUseAccountRegist__c.field-meta.xml
<CustomField>
    <fullName>SUseAccountRegist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>取引先未登録名刺一覧メニュー、取引先登録ボタン を表示する</description>
    <inlineHelpText>取引先未登録名刺一覧メニュー、取引先登録ボタン を表示する</inlineHelpText>
    <label>S取引先、取引先責任者登録機能を使う</label>
    <type>Checkbox</type>
</CustomField>