sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SUseGIS__c.field-meta.xml
<CustomField>
    <fullName>SUseGIS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>S地理情報を使う</label>
    <type>Checkbox</type>
</CustomField>