sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SUseImageLocalStrage__c.field-meta.xml
<CustomField>
    <fullName>SUseImageLocalStrage__c</fullName>
    <defaultValue>true</defaultValue>
    <description>SmartViscaカメラでローカルストレージへの画像の保存を許可する</description>
    <label>S画像データにローカルストレージを使う</label>
    <type>Checkbox</type>
</CustomField>