sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SUseIndexSearch__c.field-meta.xml
<CustomField>
    <fullName>SUseIndexSearch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>文字を入力し検索するのではなく、予め用意したインデックスによる検索を使います。</description>
    <label>Sインデックス検索を使う</label>
    <type>Checkbox</type>
</CustomField>