sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SUseSessionStrage__c.field-meta.xml
<CustomField>
    <fullName>SUseSessionStrage__c</fullName>
    <defaultValue>true</defaultValue>
    <description>一覧の名刺データをセッションストレージに保持します。</description>
    <label>Sセッションストレージを使う</label>
    <type>Checkbox</type>
</CustomField>