sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SUseStandardActivityUI__c.field-meta.xml
<CustomField>
    <fullName>SUseStandardActivityUI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>行動やToDoは標準の画面を使う</description>
    <inlineHelpText>行動やToDoは標準の画面を使う場合はチェックします。カスタム項目は、標準の画面でのみ編集可能です。関連付けは標準画面では出来ません。</inlineHelpText>
    <label>S行動やToDoは標準の画面を使う</label>
    <type>Checkbox</type>
</CustomField>