sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SUseStandardNamecardEditUI__c.field-meta.xml
<CustomField>
    <fullName>SUseStandardNamecardEditUI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>名刺の編集画面はSmartVisca専用のカスタマイズ画面でなくSalesforce1の標準画面を使用します。
S名刺詳細は標準の画面を使う項目がチェックされていない場合に有効です。</description>
    <inlineHelpText>Salesforce１の詳細画面では、標準の画面で編集した結果を、即時反映しません。</inlineHelpText>
    <label>S名刺編集は標準の画面を使う</label>
    <type>Checkbox</type>
</CustomField>