sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/SUseStandardNamecardViewUI__c.field-meta.xml
<CustomField>
    <fullName>SUseStandardNamecardViewUI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>名刺の詳細画面はSmartVisca専用のカスタマイズ画面でなくSalesforce1の標準画面を使用します。</description>
    <inlineHelpText>チェックすると、名刺編集も標準の画面になります。</inlineHelpText>
    <label>S名刺詳細は標準の画面を使う</label>
    <type>Checkbox</type>
</CustomField>